// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FrederickaH1 renders correctly 1`] = `
<h1
  className="sc-gsDJrp duPHPt"
>
  <p
    className="sc-bdvvaa eMTeRp"
  >
    Hello World
  </p>
</h1>
`;

exports[`FrederickaH1 renders correctly 2`] = `
<h1
  className="sc-gsDJrp duPHPt"
>
  <p
    className="sc-bdvvaa iTAKXK"
    color="red"
  >
    Hello World
  </p>
</h1>
`;

exports[`FrederickaH2 renders correctly 1`] = `
<h2
  className="sc-dkPtyc FkeEH"
>
  <p
    className="sc-bdvvaa eMTeRp"
  >
    Hello World
  </p>
</h2>
`;

exports[`FrederickaH2 renders correctly 2`] = `
<h2
  className="sc-dkPtyc FkeEH"
>
  <p
    className="sc-bdvvaa iTAKXK"
    color="red"
  >
    Hello World
  </p>
</h2>
`;

exports[`FrederickaH3 renders correctly 1`] = `
<h3
  className="sc-hKwCoD NiySg"
>
  <p
    className="sc-bdvvaa eMTeRp"
  >
    Hello World
  </p>
</h3>
`;

exports[`FrederickaH3 renders correctly 2`] = `
<h3
  className="sc-hKwCoD NiySg"
>
  <p
    className="sc-bdvvaa iTAKXK"
    color="red"
  >
    Hello World
  </p>
</h3>
`;

exports[`FrederickaText renders correctly 1`] = `
<p
  className="sc-bdvvaa eMTeRp"
>
  Hello World
</p>
`;

exports[`FrederickaText renders correctly 2`] = `
<p
  className="sc-bdvvaa iTAKXK"
  color="red"
>
  Hello World
</p>
`;
